--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-  "name": "stacktical-dsla-contracts",
+  "name": "luckyseven-protocol-contracts",
   "version": "2.0.0",
-  "description": "DSLA Protocol",
+  "description": "LuckySeven protocol contracts",
   "main": "index.js",
   "scripts": {
     "export-data": "npm run truffle:compile && npm run chore:export-docs && npm run chore:prettier-docs",
     "chore:export-docs": "npm run truffle:exec:export-abi && npm run truffle:exec:export-natspec",
     "chore:prettier-docs": "prettier --write 'abis/**.ts' 'natspec/**/**.json'",
     "test:luckyseven": "truffle test --network develop test/luckyseven.test.js",
+    "test:luckysevenprng": "truffle test --network develop test/luckysevenprng.test.js",
     "truffle:compile": "truffle compile --network develop",
+    "truffle:console:develop": "truffle console --network develop",
+    "truffle:console:kovan": "truffle console --network kovan",
+    "truffle:debug:develop": "truffle debug '0xd33c38b973f4226917810c02a4aa898f36f0dfafeee3ba80b3e8a288f0d81d1a' --network develop",
     "truffle:exec:export-abi": "truffle exec --network develop scripts/export-abis.js",
     "truffle:exec:export-natspec": "truffle exec --network develop scripts/export-natspec.js",
     "remix": "npx remixd -s . --remix-ide https://remix.ethereum.org"
   },
-  "author": "DSLA Core Developers",
+  "author": "Matías Barrios",
   "license": "ISC",
   "dependencies": {
+    "@chainlink/contracts": "^0.1.4",
     "@openzeppelin/contracts": "^3.2.0",
     "axios": "^0.21.1",
-    "babel-polyfill": "^6.26.0",
-    "babel-register": "^6.26.0",
     "bignumber.js": "^9.0.1",
     "dotenv": "^8.2.0",
     "truffle-hdwallet-provider": "^1.0.17"
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-async-generator-functions": "^7.12.12",
-    "@babel/plugin-transform-async-to-generator": "^7.12.1",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
     "@openzeppelin/test-environment": "^0.1.9",
     "@openzeppelin/test-helpers": "^0.5.9",
     "@types/web3": "^1.2.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -49,10 +51,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Stacktical/stacktical-dsla-contracts.git"
+    "url": "git+https://github.com/luckyseven/luckyseven-protocol-contracts.git"
   },
   "bugs": {
-    "url": "https://github.com/Stacktical/stacktical-dsla-contracts/issues"
+    "url": "https://github.com/luckyseven/luckyseven-protocol-contracts/issues"
   },
-  "homepage": "https://github.com/Stacktical/stacktical-dsla-contracts#readme"
+  "homepage": "https://github.com/luckyseven/luckyseven-protocol-contracts#readme"
 }
