feat: asking for multiple insecure parameters to the same node

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "export-data": "npm run truffle:compile && npm run chore:export-docs && npm run chore:prettier-docs",
     "chore:export-docs": "npm run truffle:exec:export-abi && npm run truffle:exec:export-natspec",
     "chore:prettier-docs": "prettier --write 'abis/**.ts' 'natspec/**/**.json'",
-    "test:luckyseven": "truffle test --network develop test/luckyseven.test.js",
-    "test:luckysevenprng": "truffle test --network develop test/luckysevenprng.test.js",
+    "develop:test:luckyseven": "truffle test --network develop test/luckyseven.test.js",
+    "develop:test:luckysevenprng": "truffle test --network develop test/luckysevenprng.test.js",
     "truffle:compile": "truffle compile --network develop",
     "truffle:console:develop": "truffle console --network develop",
     "truffle:console:kovan": "truffle console --network kovan",
